# AutomataGadget

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Notes.md  README.md
Source/: NieRAutomataGadget.sln
Source/NieRAutomataGadget/: Main.cpp  Main.h  NieRAutomataGadget.vcxproj  NieRAutomataGadget.vcxproj.filters  NierHook.cpp  NierHook.hpp  Resources.rc  cApp.cpp  cApp.h  resource.h
Source/NieRAutomataGadget/Panels/: InventoryPanel.cpp  InventoryPanel.hpp  MiscPanel.cpp  MiscPanel.hpp  PlayerPanel.cpp  PlayerPanel.hpp  WeaponPanel.cpp  WeaponPanel.hpp
include/: CheatsPanel.hpp  InventoryPanel.hpp  Main.h  MiscPanel.hpp  PlayerPanel.hpp  SettingsPanel.hpp  WeaponPanel.hpp  cApp.h  defines.h
resources/: resources.rc
src/: CheatsPanel.cpp  InventoryPanel.cpp  Main.cpp  MiscPanel.cpp  PlayerPanel.cpp  SettingsPanel.cpp  WeaponPanel.cpp  cApp.cpp
